# compile-time-browser

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  NOTICE  PLAN.md  README.md  shot-invaders-noassets.ppm  shot-pong.ppm
.github/workflows/: tests.yml
cmake/: toolchain-windows-x86_64.cmake
examples/: .gitignore  CMakeLists.txt  Makefile  README.md  babylon-freecam.cpp  babylon-model.cpp  babylon.cpp  counter.cpp  elements.cpp  fetchboard.cpp  fetchboard.html  fetchboard.inc  game.cpp  invaders.cpp  pong.cpp  pong.html  pong.inc  space-invaders.cpp  space-invaders.html  space-invaders.inc  widgets.cpp
examples/assets/styles/: style.css
fonts/: README.md
include/: ctbrowser.hpp
include/ctbrowser/: anim.hpp  app.hpp  assets.hpp  audio.hpp  babylon.hpp  dom.hpp  embed.hpp  engine.hpp  fetch.hpp  font8x8.hpp  fonts.hpp  image.hpp  layout.hpp  page.hpp  screenshot.hpp  script.hpp  ua.hpp  utf.hpp
infra/azure-build-server/: README.md  main.tf  remote-build.sh  server.sh  user_data.sh  variables.tf
tests/: CMakeLists.txt  anim.cpp  asset_container.cpp  babylon.cpp  browserui.cpp  dom.cpp  editing.cpp  engine  engine.cpp  fetch.cpp  forms.cpp  gc.cpp  interact.cpp  invaders_smoke.cpp  onclick.cpp  pong.cpp  render.cpp  richtext.cpp  scene_teardown.cpp  scroll.cpp  select.cpp  texture.cpp  unicode.cpp  webapi.cpp
tests/golden/: render.ppm
tools/: Brewfile  gen-assets.py  html-to-inc.py  js-bundle.py  remote-build.sh
